force-app/main/default/objects/Presales_Enhancement_Ticket__c/Presales_Enhancement_Ticket__c.object-meta.xml
<CustomObject>
    <description>Presales Enhancement Tickets</description>
    <label>Presales Enhancement Ticket</label>
    <nameField>
        <displayFormat>PE-{000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Enhancement Tickets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>