force-app/main/default/objects/Presales_Enhancement_Ticket__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <inlineHelpText>To add additional comments once the enhancement ticket has been created.</inlineHelpText>
    <label>Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>