force-app/main/default/objects/Presales_Enhancement_Ticket__c/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <label>Deal Size</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>