force-app/main/default/objects/Presales_Enhancement_Ticket__c/fields/Enhancement_In__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_In__c</fullName>
    <label>Enhancement In</label>
    <length>15</length>
    <type>Text</type>
</CustomField>