force-app/main/default/objects/Presales_Enhancement_Ticket__c/fields/Enhancement_Logged__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Logged__c</fullName>
    <label>Enhancement Logged</label>
    <length>15</length>
    <type>Text</type>
</CustomField>