force-app/main/default/objects/Presales_Enhancement_Ticket__c/fields/Presales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Presales_Stage__c</fullName>
    <formula>TEXT(Presales_Number__r.Current_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presales Stage</label>
    <type>Text</type>
</CustomField>